// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package auth.v1;
option go_package = "github.com/absmach/supermq/api/grpc/auth/v1";

// AuthService is a service that provides authentication
// and authorization functionalities for SuperMQ services.
service AuthService {
  rpc Authorize(AuthZReq) returns (AuthZRes) {}
  rpc Authenticate(AuthNReq) returns (AuthNRes) {}
}


message AuthNReq {
  string token = 1;
}

message AuthNRes {
  string id    = 1;       // token id
  string user_id = 2;     // user id
  uint32 user_role = 3;   // user role
  bool verified = 4;      // verified user
  uint32 token_type = 5;  // token type
}

message PolicyReq {
  uint32 token_type = 1;          // Token type
  string domain = 2;              // Domain
  string subject_type = 3;        // Client or User
  string subject_kind = 4;        // ID or Token
  string subject_relation = 5;    // Subject relation
  string subject = 6;             // Subject value
  string relation = 7;            // Relation to filter
  string permission = 8;          // Action
  string object = 9;              // Object ID
  string object_type = 10;        // Client, User, Group
}

message PATReq {
  string user_id = 1;             // User id (PAT)
  string pat_id = 2;              // Pat id
  uint32 entity_type = 3;         // Entity type (PAT)
  string optional_domain_id = 4;  // Optional domain id (PAT)
  uint32 operation = 5;           // Operation (PAT)
  string entity_id = 6;           // EntityID (PAT)
}

message AuthZReq {
  oneof auth_type {
    PolicyReq policy = 1;         // Policy-based authorization
    PATReq pat = 2;               // PAT authorization
  }
}

message AuthZRes {
  bool authorized = 1;
  string id = 2;
}
